--- a/Week2/Day2/Core/convertToArrow.html
+++ b/Week2/Day2/Core/convertToArrow.html
@@ -20,33 +20,33 @@
     <p>
         We just like random interactivity in the site, including a fun effect if you hover over <span id="hover-this"><b>this.</b></span>
     </p>
-    <p id="set-color" onclick="functionFromBelow('argumentOne', document.getElementById('argumentTwo').value)">
-        We can click anywhere in this paragraph tag and it will change the background color to whatever is in this input: <input type="text" id="color-input"/>
+    <p id="set-color" onclick="setBackgroundColorById('set-color', document.getElementById('color-input').value)">
+        We can click anywhere in this paragraph onFromBelowtag and it will change the background color to whatever is in this input: <input type="text" id="color-input"/>
     </p>
     <p onmouseover="mouseOverFunction(this)">
         Moving your mouse over this text will make it black, so you cannot read it!
     </p>
     <script>
-        document.getElementById("button").onclick = function() {
+        document.getElementById("button").onclick =()=> {
             setBackgroundColorById("paragraph", "blue");
         }
-        document.getElementById("alert").onclick = function(){
+        document.getElementById("alert").onclick =()=>{
             alert(document.getElementById("popup-input").value);
         }
-        document.getElementById("hover-this").onmouseover = function(){
+        document.getElementById("hover-this").onmouseover =()=>{
             setBackgroundColorById("body", "red");
         }
-        document.getElementById("hover-this").onmouseout = function(){
+        document.getElementById("hover-this").onmouseout = ()=>{
             setBackgroundColorById("body", "white");
         }        
-        const getValueFromId=(id) =>{
+        const getValueFromId=(id) => {
             return(document.getElementById(id).value);
         }
         const setBackgroundColorById=(id, color)=>{
             (document.getElementById(id).style = "background-color: " + color);
         }
         const mouseOverFunction=(el)=>{
-            (el.style = "background-color: black");
+            (el.style ="background-color : black");
         }
     </script>
 </body>
